test/tests/stages/11_long_integers/invalid_labels/extra_credit/bitshift_duplicate_cases.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[35]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(100)
  ;
  switch
  (
  identifier(x)
  <<
  const long(2l)
  )
  {
  case
  const long(34359738768l)
  :
  return
  const int(1)
  ;
  case
  const int(400)
  :
  return
  const int(0)
  ;
  }
  return
  const int(10)
  ;
  }
